--- a/02.变量和基本类型/02.变量和基本类型.vcxproj
+++ b/02.变量和基本类型/02.变量和基本类型.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="源.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Sales_item.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
